[tool.poetry]
name = "docker-mkdocs"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.17"
mkdocs-autolinks-plugin = "^0.7.1"
#mkdocs-multirepo-plugin = "^0.6.1"
mkdocs-awesome-pages-plugin = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pyproject-fmt = "^0.13.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
